# Multithreaded-Game-of-Life

./: CMakeLists.txt  Cell.cpp  Cell.h  Control.cpp  Control.h  Grid.cpp  Grid.h  OpenGLHandler.cpp  OpenGLHandler.h  README.md  Worker.cpp  Worker.h  main.cpp
